--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>About</title>
 </head>
 <body>
-    <h1>Hi I am Hassan</h1>
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="index.html">About</a></li>
+            <li><a href="resume.pdf" target="_blank">Resume</a></li>
+            <li><a href="projects.html">Projects</a></li>
+        </ul>
+    </nav>
+    <div class="body-container">
+        <h1>Hi I am Hassan Muhammed Ahsan</h1>
+    </div>
+    
 </body>
 </html>
