--- a/project.html
+++ b/project.html
@@ -108,21 +108,21 @@
     </div>
     <footer>
         <div class="footer-content">
-            <p>Ankith Reddy Avula</p>
+            <p>Hassan Muhammed Ahsan</p>
             <div class="social-links">
-                <a href="mailto:ankithr005@gmail.com">
+                <a href="mailto:ahassanforwork@gmail.com">
                     <img src="images/email-favicon.ico" alt="Email">
                     Email
                 </a>
-                <a href="https://www.linkedin.com/in/avulaankith" target="_blank">
+                <a href="https://www.linkedin.com/in/hassanahsan005" target="_blank">
                     <img src="images/linkedin-favicon.ico" alt="LinkedIn">
                     LinkedIn
                 </a>
-                <a href="https://leetcode.com/ankithavula" target="_blank">
+                <!-- <a href="https://leetcode.com/ankithavula" target="_blank">
                     <img src="images/leetcode-favicon.ico" alt="LeetCode">
                     LeetCode
-                </a>
-                <a href="https://github.com/avulaankith" target="_blank">
+                </a> -->
+                <a href="https://github.com/asteroid065" target="_blank">
                     <img src="images/github-favicon.ico" alt="GitHub">
                     GitHub
                 </a>
