Changes in projects and styling

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <h3 id="hello2">Here's who I am & what I do</h3>
             <p>
                 Hi, I'm Hassan Muhammed Ahsan. I'm an aspiring developer with a keen interest in creating meaningful and innovative projects. I love to explore new technologies and leverage them to build exciting applications.
+            <p> This Portfolio is in the First Phase of Development, the developer will be available to make changes with in few days. This Portfolio includes all of the features required to make your project successful!
+            </p>
             </p>
             <p>
                 Undergrad in Computer Science from Indian Institute of Information Technology Design and Manufacturing Kurnool, I have developed a strong foundation in Python, as well as a range of technical skills and experience with technologies such as TensorFlow,
