--- a/project.html
+++ b/project.html
@@ -34,17 +34,16 @@
                     </ul>
                 </p>
             </div>
-            <!-- <div class="portfolio-item">
-                <h3>MULTI-LABEL CLASSIFICATION FOR LAND COVER DETECTION</h3>
+            <div class="portfolio-item">
+                <h3>HR ANALYTICS DASHBOARDS</h3>
                 <p>
                 <ul class="portfolio-li">
-                    <li>Executed a Transfer learning approach to identify the land cover features from a given multi-spectral image consisting
-                    of 12 bands from Sentinel-2 Satellite</li>
-                    <li>Analyzed the raster bands reactivity to different land forms based on resolutions</li>
-                    <li>Obtained a recall of 63.80 for all the bands and a recall of 63.00 when used the RGB bands for prediction</li>
+                    <li>Developed a dashboards using Power BI</li>
+                    <li>The KPIs have been made for easy understanding</li>
+                    <li>Interactive dashboards has been made with in-details requirement </li>
                 </ul>
                 </p>
-            </div> -->
+            </div>
             <!-- <div class="portfolio-item">
                 <h3>NEIGHBOURHOOD ANALYSIS USING PYTHON</h3>
                 <p>
