--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
                     <li>Deployed a model that generates separated audios of the above categories with a mean absolute error(MAE) of 1.3733</li>
                 </ul>
                 <!-- <p>Worked on developing and maintaining web applications using JavaScript and React.</p> -->
+            </div>
+        </div>
         <div class="education">
             <h1>Education</h1>
             <div class="education-item">
