--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="body-container">
         <div class="myimage">
-            <img src="images/myphoto.jpg" alt="myphoto">
+            <img src="C:\Users\Alienware\asteroid065.github.io\imgaes\myphoto.jpg" alt="myphoto">
         </div>
         <div class="about-me">
             <h1 id="hello">Hello</h1>
