Updates in Projects

--- a/project.html
+++ b/project.html
@@ -11,40 +11,51 @@
 <body>
     <!-- Navigation Bar -->
     <div class="topnav">
-        <h4 onclick="clickName()">Hassan Muhammed Ahsan</h4>
-        <a href="/">About</a>
+        <h4 onclick="clickName()">Ankith Reddy Avula</h4>
+        <a href="/">Home</a>
         <a href="resume.pdf" target="_blank">Resume</a>
         <a href="projects.html" class="active">Projects</a>
     </div>
     <div class="body-container">
         <div class="portfolio">
-            <h1>Portfolio</h1>
+            <h1>Projects</h1>
             <!-- Your portfolio items go here -->
             <!-- Example: -->
             <div class="portfolio-item">
+                <div class="portfolio-image">
+                    <img src="images/opfaas.jpg" alt="openfaas">
+                </div>
                 <h3>TRAFFIC AWARE SCALING OPTIMIZATION IN OPENFAAS</h3>
                 <p>
-                    <ul class="portfolio-li">
-                        <li>Proposed and Implemented a traffic aware scaling algorithm for the OpenFaaS platform for changing the static
-                        parameters during scaling</li>
-                        <li>Improved run times and request handling by 30% for Data Science Functions written in the Function-as-a-service model
-                        in the OpenFaaS framework</li>
-                        <li>Reduced the response time in the proposed design by 50% compared to time taken in Default Static Scaling
-                        implementation</li>
-                    </ul>
-                </p>
-            </div>
-            <div class="portfolio-item">
-                <h3>HR ANALYTICS DASHBOARDS</h3>
-                <p>
                 <ul class="portfolio-li">
-                    <li>Developed a dashboards using Power BI</li>
-                    <li>The KPIs have been made for easy understanding</li>
-                    <li>Interactive dashboards has been made with in-details requirement</li>
+                    <li>Proposed and Implemented a traffic aware scaling algorithm for the OpenFaaS platform for changing the static
+                        parameters during scaling</li>
+                    <li>Improved run times and request handling by 30% for Data Science Functions written in the Function-as-a-service
+                        model
+                        in the OpenFaaS framework</li>
+                    <li>Reduced the response time in the proposed design by 50% compared to time taken in Default Static Scaling
+                        implementation</li>
                 </ul>
                 </p>
             </div>
-            <!-- <div class="portfolio-item">
+            <div class="portfolio-item">
+                <div class="portfolio-image2">
+                    <img src="images/multi-label-classification.png" alt="multi-label-classification">
+                </div>
+                <h3>MULTI-LABEL CLASSIFICATION FOR LAND COVER DETECTION</h3>
+                <p>
+                <ul class="portfolio-li">
+                    <li>Executed a Transfer learning approach to identify the land cover features from a given multi-spectral image consisting
+                    of 12 bands from Sentinel-2 Satellite</li>
+                    <li>Analyzed the raster bands reactivity to different land forms based on resolutions</li>
+                    <li>Obtained a recall of 63.80 for all the bands and a recall of 63.00 when used the RGB bands for prediction</li>
+                </ul>
+                </p>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-image3">
+                    <img src="images/nymap.png" alt="neighborhoods">
+                </div>
                 <h3>NEIGHBOURHOOD ANALYSIS USING PYTHON</h3>
                 <p>
                 <ul class="portfolio-li">
@@ -52,8 +63,11 @@
                     <li>Identified localities preferable to live where Indian Cuisine Restaurants are available using a rating scale of 10</li>
                 </ul>
                 </p>
-            </div> -->
-            <!-- <div class="portfolio-item">
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-image">
+                    <img src="images/twitter-image.jpeg" alt="neighborhoods">
+                </div>
                 <h3>TWITTER SENTIMENT ANALYSIS</h3>
                 <p>
                 <ul class="portfolio-li">
@@ -66,8 +80,11 @@
                     <li>Collaborated with a team to drive the project's success, contributing to its development and analysis.</li>
                 </ul>
                 </p>
-            </div> -->
-            <!-- <div class="portfolio-item">
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-image">
+                    <img src="images/blogging-website.png" alt="neighborhoods">
+                </div>
                 <h3>BLOGGING WEBSITE</h3>
                 <p>
                 <ul class="portfolio-li">
@@ -79,8 +96,11 @@
                     posting, and reply functionalities.</li>
                 </ul>
                 </p>
-            </div> -->
-            <!-- <div class="portfolio-item">
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-image3">
+                    <img src="images/IPL-Toss-Prediction.png" alt="neighborhoods">
+                </div>
                 <h3>PREMIER LEAGUE RESULT PREDICTION</h3>
                 <p>
                 <ul class="portfolio-li">
@@ -90,6 +110,9 @@
                 </p>
             </div>
             <div class="portfolio-item">
+                <div class="portfolio-image">
+                    <img src="images/multi-threaded-file-sync.webp" alt="neighborhoods">
+                </div>
                 <h3>MULTI-THREADED FILE SYNC SYSTEM</h3>
                 <p>
                 <ul class="portfolio-li">
@@ -101,27 +124,27 @@
                     <li>Developed synchronous and asynchronous communication functionalities between the client and server.</li>
                 </ul>
                 </p>
-            </div> -->
+            </div>
             <!-- Add more projects as needed -->
         </div>
     </div>
     <footer>
         <div class="footer-content">
-            <p>Hassan Muhammed Ahsan</p>
+            <p>© 2023 <a href="/">Ankith Reddy Avula</a></p>
             <div class="social-links">
-                <a href="mailto:ahassanforwork@gmail.com">
+                <a href="mailto:ankithr005@gmail.com">
                     <img src="images/email-favicon.ico" alt="Email">
                     Email
                 </a>
-                <a href="https://www.linkedin.com/in/hassanahsan005" target="_blank">
+                <a href="https://www.linkedin.com/in/avulaankith" target="_blank">
                     <img src="images/linkedin-favicon.ico" alt="LinkedIn">
                     LinkedIn
                 </a>
-                <!-- <a href="https://leetcode.com/ankithavula" target="_blank">
+                <a href="https://leetcode.com/ankithavula" target="_blank">
                     <img src="images/leetcode-favicon.ico" alt="LeetCode">
                     LeetCode
-                </a> -->
-                <a href="https://github.com/asteroid065" target="_blank">
+                </a>
+                <a href="https://github.com/avulaankith" target="_blank">
                     <img src="images/github-favicon.ico" alt="GitHub">
                     GitHub
                 </a>
