Updates in Projects

--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Navigation Bar -->
     <div class="topnav">
-        <h4 onclick="clickName()">Ankith Reddy Avula</h4>
+        <h4 onclick="clickName()">Hassan Muhammed Ahsan</h4>
         <a href="/">Home</a>
         <a href="resume.pdf" target="_blank">Resume</a>
         <a href="projects.html" class="active">Projects</a>
@@ -130,21 +130,17 @@
     </div>
     <footer>
         <div class="footer-content">
-            <p>© 2023 <a href="/">Ankith Reddy Avula</a></p>
+            <p>© 2023 <a href="/">Hassan Muhammed Ahsan</a></p>
             <div class="social-links">
-                <a href="mailto:ankithr005@gmail.com">
+                <a href="mailto:ahassanforwork@gmail.com">
                     <img src="images/email-favicon.ico" alt="Email">
                     Email
                 </a>
-                <a href="https://www.linkedin.com/in/avulaankith" target="_blank">
+                <a href="https://www.linkedin.com/in/hassanahsan005" target="_blank">
                     <img src="images/linkedin-favicon.ico" alt="LinkedIn">
                     LinkedIn
                 </a>
-                <a href="https://leetcode.com/ankithavula" target="_blank">
-                    <img src="images/leetcode-favicon.ico" alt="LeetCode">
-                    LeetCode
-                </a>
-                <a href="https://github.com/avulaankith" target="_blank">
+                <a href="https://github.com/asteroid065" target="_blank">
                     <img src="images/github-favicon.ico" alt="GitHub">
                     GitHub
                 </a>
