Made changes in Code

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h4 onclick="clickName()">Hassan Muhammed Ahsan</h4>
         <a href="/" class="active">Home</a>
         <a href="resume.pdf" target="_blank">Resume</a>
-        <a href="projects.html">Projects</a>
+        <a href="projects.html" target="_blank">Projects</a>
     </div>
 
     <div class="body-container">
