--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
             </div>
         </div>
 
+        <div class="Technology">
+            <h1>Technologies</h1>
+           <img src="images/pyhton.png" width="20px" height="15px" alt="Pyhton"> Python
+        </div>
+
         <div class="experience">
             <h1>Experience</h1>
             <!-- Your experience details go here -->
