--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <div class="Technology">
             <h1>Technologies</h1>
-           <img src="images/pyhton.png" width="20px" height="15px" alt="Pyhton"> Python
+           <img src="images/python.png" width="20px" height="15px" alt="Pyhton"> Python
         </div>
 
         <div class="experience">
