--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 
         <div class="Technology">
             <h1>Technologies</h1>
-           <img src="images/python.png" width="40px" height="25px"> Python
-           <img src="images/powerbi.jpg"  width="100px" height="70px"> Power BI
-           <img src="images/tableau.jpg"  width="60px" height="70px"> Tableau
-           <img src="images/sql.jpg"  width="40px" height="50px"> SQL
+           <img src="images/python.png" width="40px" height="25px"> 
+           <img src="images/powerbi.jpg"  width="100px" height="70px"> 
+           <img src="images/tableau.jpg"  width="60px" height="70px"> 
+           <img src="images/sql.jpg"  width="60px" height="50px"> 
         </div>
 
         <div class="experience">
