--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
 
         <div class="Technology">
             <h1>Technologies</h1>
-           <img src="images/python.png" width="40px" height="25px"> 
-           <img src="images/powerbi.jpg"  width="100px" height="70px"> 
-           <img src="images/tableau.jpg"  width="60px" height="70px"> 
-           <img src="images/sql.jpg"  width="60px" height="50px"> 
+           <img src="images/python.png" width="40px" height="25px" alt="Pyhton"> 
+           <img src="images/powerbi.jpg"  width="100px" height="70px" alt="Power BI"> 
+           <img src="images/tableau.jpg"  width="60px" height="70px" alt="Tableau"> 
+           <!-- <img src="images/sql.jpg"  width="60px" height="50px" alt="SQL">  -->
+           <img src="images/tensorflow_pytorch.png" width="60px" height="50px" alt="Tensorflow">
         </div>
 
         <div class="experience">
