--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
            <img src="images/tableau.jpg"  width="60px" height="70px" alt="Tableau"> 
            <!-- <img src="images/sql.jpg"  width="60px" height="50px" alt="SQL">  -->
            <img src="images/tensorflow_pytorch.png" width="60px" height="50px" alt="Tensorflow">
-           
+           <img src="images/css.JPG" alt="CSS">
+           <img src="images/html.jpeg" alt="HTML">
+           <img src="images/docker.png" alt="Docker">
+           <img src="images/flask.png" alt="Flask">
+           <img src="images/git.jpg" alt="GIT">
+           <img src="images/java.jpg" alt="Java">
         </div>
 
         <div class="experience">
