--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             </div>
         </div>
 
-        <div class="Technology">
-            <h1>Technologies</h1>
+        <div class="Skills">
+            <h1>Skills</h1>
            <img src="images/python.png" alt="Pyhton"> 
            <img src="images/powerbi.jpg" alt="Power BI"> 
            <img src="images/tableau.jpg" alt="Tableau"> 
