--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
            <img src="images/flask.png" alt="Flask">
            <img src="images/git.jpg" alt="GIT">
            <img src="images/java.jpg" alt="Java">
+           <img src="images/github.png" alt="">
         </div>
 
         <div class="experience">
