--- a/index.html
+++ b/index.html
@@ -50,20 +50,52 @@
             </div>
         </div>
 
-        <div class="Skills">
+        <div class="skills">
             <h1>Skills</h1>
-           <img src="images/python.png" alt="Pyhton"> 
-           <img src="images/powerbi.jpg" alt="Power BI"> 
-           <img src="images/tableau.jpg" alt="Tableau"> 
-           <!-- <img src="images/sql.jpg"  width="60px" height="50px" alt="SQL">  -->
-           <img src="images/tensorflow_pytorch.png" alt="Tensorflow">
-           <img src="images/css.JPG" alt="CSS">
-           <img src="images/html.jpeg" alt="HTML">
-           <img src="images/docker.png" alt="Docker">
-           <img src="images/flask.png" alt="Flask">
-           <img src="images/git.jpg" alt="GIT">
-           <img src="images/java.jpg" alt="Java">
-           <img src="images/github.png" alt="">
+            <ul class="skills-list">
+                <li class="skill-item">
+                    <img src="images/python.png" alt="Python Logo">
+                    <div class="skill-tooltip">Python</div>
+                </li>
+                <li class="skill-item">
+                    <img src="images/powerbi.jpg" alt="PyTorch Logo">
+                    <div class="skill-tooltip">PyTorch</div>
+                </li>
+                <li class="skill-item">
+                    <img src="images/tensorflow.jpg" alt="TensorFlow Logo">
+                    <div class="skill-tooltip">TensorFlow</div>
+                </li>
+                <li class="skill-item">
+                    <img src="images/html.jpeg" alt="HTML Logo">
+                    <div class="skill-tooltip">HTML</div>
+                </li>
+                <li class="skill-item">
+                    <img src="images/css.JPG" alt="CSS Logo">
+                    <div class="skill-tooltip">CSS</div>
+                </li>
+                <li class="skill-item">
+                    <img src="images/tableau.jpg" alt="JS Logo">
+                    <div class="skill-tooltip">JavaScript</div>
+                </li>
+            </ul>
+            <ul class="skills-list">
+                <li class="skill-item">
+                    <img src="images/flask.png" alt="Flask Logo">
+                    <div class="skill-tooltip">Flask</div>
+                </li>
+                <li class="skill-item">
+                    <img src="images/mysql.png" alt="MySQL Logo">
+                    <div class="skill-tooltip">MySQL</div>
+                </li>
+                <li class="skill-item">
+                    <img src="images/github.png" alt="Git Logo">
+                    <div class="skill-tooltip">Git</div>
+                </li>
+                <li class="skill-item">
+                    <img src="imgaes/tensorflow_pytorch.png" alt="">
+
+                </li>
+            </ul>
         </div>
 
         <div class="experience">
