--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="skill-tooltip">Python</div>
                 </li>
                 <li class="skill-item">
-                    <img src="images/powerbi.jpg" alt="PyTorch Logo">
+                    <img src="images/powerbi.jpg" alt="Power BI Logo">
                     <div class="skill-tooltip">PyTorch</div>
                 </li>
                 <li class="skill-item">
@@ -92,8 +92,12 @@
                     <div class="skill-tooltip">Git</div>
                 </li>
                 <li class="skill-item">
-                    <img src="imgaes/tensorflow_pytorch.png" alt="">
-
+                    <img src="imgaes/java.jpg" alt="Java Logo">
+                    <div class="skill-tooltip">Java</div>
+                </li>
+                <li class="skill-item">
+                    <img src="images/docker.png" alt="Docker Logo">
+                    <div class="sill-item">Docker</div>
                 </li>
             </ul>
         </div>
